crates/swc_ecma_parser/tests/jsx/errors/unexpected_token_did_you_mean_or_gt/input.js
var x1 = <T>() => {}</T>;
